@@ -3,14 +3,14 @@
 use strict;
 use warnings;
 
-use Test::Shared::Fixture::Wikibase::Datatype::Snak::Wikidata::GivenName::Douglas;
+use Test::Shared::Fixture::Wikibase::Datatype::Snak::Wikidata::GivenName::Michal;
 use Wikibase::Datatype::Print::Snak;
 
 # Object.
-my $obj = Test::Shared::Fixture::Wikibase::Datatype::Snak::Wikidata::GivenName::Douglas->new;
+my $obj = Test::Shared::Fixture::Wikibase::Datatype::Snak::Wikidata::GivenName::Michal->new;
 
 # Print out.
 print scalar Wikibase::Datatype::Print::Snak::print($obj);
 
 # Output:
-# P735: Q463035
+# P735: Q18563993
